# minius_codex_lab

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  PACKAGE_MANIFEST.json  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.codex/: config.toml
.codex/agents/: case-law-analyst.toml  document-engineer.toml  eu-law-analyst.toml  evidence-auditor.toml  legal-coordinator.toml  legal-drafter.toml  policy-impact-analyst.toml  privacy-reviewer.toml  quantitative-analyst.toml  ua-law-researcher.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  skill-proposal.yml
.github/workflows/: ci.yml  release.yml
docs/: COMPATIBILITY.md  DEVELOPMENT.md  PROVENANCE.md  PUBLIC_REPOSITORY_MODEL.md  RELEASING.md  SKILL_AND_ROLE_CONTRACTS.md  THREAT_MODEL.md
docs/releases/: v1.0.0-beta.1.md  v1.0.0-beta.2.md  v1.1.0-beta.1.md
docs/task/: MINIUS_CODEX_LAB_AUDIT_REMEDIATION_2026-07-11.md  MINIUS_CODEX_LAB_AUDIT_REPORT_2026-07-11.md
scripts/: build_release.py  check_repo_safety.py  codex_runtime_probe.py  validate_workspace.py
tests/: test_build_release.py  test_codex_runtime_probe.py  test_format_monitoring_report_skill.py  test_repo_safety.py  test_runtime_hooks.py  test_validate_workspace.py  test_version_contract.py  test_workspace_lifecycle.py
tools/verifiable_document/: AGENTS.md  README.md  build.py  (+5 more)
workspace-template/: .gitattributes  .gitignore  .worktreeinclude  AGENTS.md  README.md  SECURITY.md  requirements.txt
(+71 files in other folders)
